[DDW-385] JP values for Sent & Received

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -5054,13 +5054,27 @@
         "description": "Title \"Earned delegation rewards\" label on the staking rewards page.",
         "end": {
           "column": 3,
-          "line": 30
+          "line": 29
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.title",
         "start": {
           "column": 9,
-          "line": 25
+          "line": 24
+        }
+      },
+      {
+        "defaultMessage": "!!!Rewards",
+        "description": "Filename prefix for the \"Export CSV\" on the staking rewards page.",
+        "end": {
+          "column": 3,
+          "line": 35
+        },
+        "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
+        "id": "staking.rewards.csvFilenamePrefix",
+        "start": {
+          "column": 21,
+          "line": 30
         }
       },
       {
@@ -5068,13 +5082,13 @@
         "description": "Label for the \"Export CSV\" button on the staking rewards page.",
         "end": {
           "column": 3,
-          "line": 36
+          "line": 41
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.exportButtonLabel",
         "start": {
           "column": 21,
-          "line": 31
+          "line": 36
         }
       },
       {
@@ -5082,13 +5096,13 @@
         "description": "\"No rewards\" rewards label on staking rewards page.",
         "end": {
           "column": 3,
-          "line": 41
+          "line": 46
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.no.rewards",
         "start": {
           "column": 13,
-          "line": 37
+          "line": 42
         }
       },
       {
@@ -5096,13 +5110,13 @@
         "description": "Table header \"Wallet\" label on staking rewards page",
         "end": {
           "column": 3,
-          "line": 46
+          "line": 51
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.tableHeader.wallet",
         "start": {
           "column": 21,
-          "line": 42
+          "line": 47
         }
       },
       {
@@ -5110,13 +5124,13 @@
         "description": "Table header \"Reward\" label on staking rewards page",
         "end": {
           "column": 3,
-          "line": 51
+          "line": 56
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.tableHeader.reward",
         "start": {
           "column": 21,
-          "line": 47
+          "line": 52
         }
       },
       {
@@ -5124,13 +5138,13 @@
         "description": "Table header \"Date\" label in exported csv file",
         "end": {
           "column": 3,
-          "line": 56
+          "line": 61
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.tableHeader.date",
         "start": {
           "column": 19,
-          "line": 52
+          "line": 57
         }
       },
       {
@@ -5138,13 +5152,13 @@
         "description": "Label for \"Learn more\" button on staking rewards page",
         "end": {
           "column": 3,
-          "line": 61
+          "line": 66
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.learnMore.ButtonLabel",
         "start": {
           "column": 24,
-          "line": 57
+          "line": 62
         }
       },
       {
@@ -5152,13 +5166,13 @@
         "description": "Rewards description text on staking rewards page",
         "end": {
           "column": 3,
-          "line": 67
+          "line": 72
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.rewards.note",
         "start": {
           "column": 8,
-          "line": 62
+          "line": 67
         }
       },
       {
@@ -5166,13 +5180,13 @@
         "description": "unknown stake pool label on staking rewards page.",
         "end": {
           "column": 3,
-          "line": 72
+          "line": 77
         },
         "file": "source/renderer/app/components/staking/rewards/StakingRewardsForIncentivizedTestnet.js",
         "id": "staking.delegationCenter.syncingTooltipLabel",
         "start": {
           "column": 23,
-          "line": 68
+          "line": 73
         }
       }
     ],
@@ -9612,13 +9626,13 @@
         "description": "All Transactions button label.",
         "end": {
           "column": 3,
-          "line": 37
+          "line": 36
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.allTransactions",
         "start": {
           "column": 19,
-          "line": 33
+          "line": 32
         }
       },
       {
@@ -9626,13 +9640,13 @@
         "description": "Reset Filter button label.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 41
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.resetFilter",
         "start": {
           "column": 15,
-          "line": 38
+          "line": 37
         }
       },
       {
@@ -9640,13 +9654,13 @@
         "description": "Incoming filter type.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 46
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.incoming",
         "start": {
           "column": 12,
-          "line": 43
+          "line": 42
         }
       },
       {
@@ -9654,13 +9668,13 @@
         "description": "Outgoing filter type.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 51
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.outgoing",
         "start": {
           "column": 12,
-          "line": 48
+          "line": 47
         }
       },
       {
@@ -9668,13 +9682,13 @@
         "description": "Date range of filter.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 56
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.dateRange",
         "start": {
           "column": 13,
-          "line": 53
+          "line": 52
         }
       },
       {
@@ -9682,13 +9696,13 @@
         "description": "Select time range indication of filter.",
         "end": {
           "column": 3,
-          "line": 62
+          "line": 61
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.selectTimeRange",
         "start": {
           "column": 19,
-          "line": 58
+          "line": 57
         }
       },
       {
@@ -9696,13 +9710,13 @@
         "description": "Last 7 days range of filter.",
         "end": {
           "column": 3,
-          "line": 67
+          "line": 66
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.last7Days",
         "start": {
           "column": 13,
-          "line": 63
+          "line": 62
         }
       },
       {
@@ -9710,13 +9724,13 @@
         "description": "Last 30 days range of filter.",
         "end": {
           "column": 3,
-          "line": 72
+          "line": 71
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.last30Days",
         "start": {
           "column": 14,
-          "line": 68
+          "line": 67
         }
       },
       {
@@ -9724,13 +9738,13 @@
         "description": "Last 90 days range of filter.",
         "end": {
           "column": 3,
-          "line": 77
+          "line": 76
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.last90Days",
         "start": {
           "column": 14,
-          "line": 73
+          "line": 72
         }
       },
       {
@@ -9738,13 +9752,13 @@
         "description": "This year date range of filter.",
         "end": {
           "column": 3,
-          "line": 82
+          "line": 81
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.thisYear",
         "start": {
           "column": 12,
-          "line": 78
+          "line": 77
         }
       },
       {
@@ -9752,13 +9766,13 @@
         "description": "Custom date range of filter.",
         "end": {
           "column": 3,
-          "line": 87
+          "line": 86
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.custom",
         "start": {
           "column": 10,
-          "line": 83
+          "line": 82
         }
       },
       {
@@ -9766,13 +9780,13 @@
         "description": "Amount range of filter.",
         "end": {
           "column": 3,
-          "line": 92
+          "line": 91
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.amountRange",
         "start": {
           "column": 15,
-          "line": 88
+          "line": 87
         }
       },
       {
@@ -9780,13 +9794,13 @@
         "description": "Filter button label.",
         "end": {
           "column": 3,
-          "line": 97
+          "line": 96
         },
         "file": "source/renderer/app/components/wallet/transactions/FilterDialog.js",
         "id": "wallet.transaction.filter.apply",
         "start": {
           "column": 9,
-          "line": 93
+          "line": 92
         }
       }
     ],
@@ -10169,13 +10183,13 @@
         "description": "Label for the \"Today\" label on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 24
+          "line": 25
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.todayLabel",
         "start": {
           "column": 9,
-          "line": 20
+          "line": 21
         }
       },
       {
@@ -10183,13 +10197,13 @@
         "description": "Label for the \"Yesterday\" label on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 29
+          "line": 30
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.yesterdayLabel",
         "start": {
           "column": 13,
-          "line": 25
+          "line": 26
         }
       },
       {
@@ -10197,13 +10211,13 @@
         "description": "Label for the \"Show more transactions\" button on the wallet summary page.",
         "end": {
           "column": 3,
-          "line": 35
+          "line": 36
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.showMoreTransactionsButtonLabel",
         "start": {
           "column": 35,
-          "line": 30
+          "line": 31
         }
       },
       {
@@ -10211,13 +10225,13 @@
         "description": "Syncing transactions message on async wallet restore.",
         "end": {
           "column": 3,
-          "line": 41
+          "line": 42
         },
         "file": "source/renderer/app/components/wallet/transactions/WalletTransactionsList.js",
         "id": "wallet.summary.page.syncingTransactionsMessage",
         "start": {
           "column": 30,
-          "line": 36
+          "line": 37
         }
       }
     ],
@@ -13267,7 +13281,7 @@
         "description": "Notification for download Rewards CSV file.",
         "end": {
           "column": 3,
-          "line": 38
+          "line": 37
         },
         "file": "source/renderer/app/containers/notifications/NotificationsContainer.js",
         "id": "notification.downloadRewardsCSVSuccess",
@@ -13281,13 +13295,13 @@
         "description": "Notification for download Transactions CSV file.",
         "end": {
           "column": 3,
-          "line": 44
+          "line": 42
         },
         "file": "source/renderer/app/containers/notifications/NotificationsContainer.js",
         "id": "notification.downloadTransactionsCSVSuccess",
         "start": {
           "column": 34,
-          "line": 39
+          "line": 38
         }
       },
       {
@@ -13295,13 +13309,13 @@
         "description": "Notification for the wallet address copy success in the Wallet Receive page.",
         "end": {
           "column": 3,
-          "line": 51
+          "line": 49
         },
         "file": "source/renderer/app/containers/notifications/NotificationsContainer.js",
         "id": "notification.copyAddress",
         "start": {
           "column": 15,
-          "line": 45
+          "line": 43
         }
       },
       {
@@ -13309,13 +13323,13 @@
         "description": "Notification for the state directory copy success in the Diagnostics page.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 55
         },
         "file": "source/renderer/app/containers/notifications/NotificationsContainer.js",
         "id": "notification.copyStateDirectoryPath",
         "start": {
           "column": 26,
-          "line": 52
+          "line": 50
         }
       }
     ],
@@ -13493,13 +13507,13 @@
         "description": "\"Learn more\" link URL in the staking rewards page",
         "end": {
           "column": 3,
-          "line": 18
+          "line": 14
         },
         "file": "source/renderer/app/containers/staking/StakingRewardsPage.js",
         "id": "staking.rewards.learnMore.linkUrl",
         "start": {
           "column": 20,
-          "line": 14
+          "line": 10
         }
       }
     ],
@@ -14578,30 +14592,30 @@
         }
       },
       {
-        "defaultMessage": "!!!Expend",
-        "description": "Transactions CSV value - Type Expend",
+        "defaultMessage": "!!!Sent",
+        "description": "Transactions CSV value - Type Sent",
         "end": {
           "column": 3,
           "line": 58
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
-        "id": "wallet.transactions.csv.value.type.expend",
+        "id": "wallet.transactions.csv.value.type.sent",
         "start": {
-          "column": 19,
+          "column": 17,
           "line": 54
         }
       },
       {
-        "defaultMessage": "!!!Income",
-        "description": "Transactions CSV value - Type Income",
+        "defaultMessage": "!!!Received",
+        "description": "Transactions CSV value - Type Received",
         "end": {
           "column": 3,
           "line": 63
         },
         "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
-        "id": "wallet.transactions.csv.value.type.income",
+        "id": "wallet.transactions.csv.value.type.received",
         "start": {
-          "column": 19,
+          "column": 21,
           "line": 59
         }
       },
@@ -14645,6 +14659,20 @@
         "start": {
           "column": 22,
           "line": 74
+        }
+      },
+      {
+        "defaultMessage": "!!!Transactions",
+        "description": "Transactions CSV \"Transactions\" filename",
+        "end": {
+          "column": 3,
+          "line": 83
+        },
+        "file": "source/renderer/app/utils/transactionsCsvGenerator.js",
+        "id": "wallet.transactions.csv.filenamePrefix",
+        "start": {
+          "column": 18,
+          "line": 79
         }
       }
     ],
