--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -933,8 +933,8 @@
   "wallet.transactions.csv.value.amount": "{amount}ADA",
   "wallet.transactions.csv.value.statusConfirmed": "承認済み",
   "wallet.transactions.csv.value.statusPending": "保留中",
-  "wallet.transactions.csv.value.type.sent": "!!!Sent",
-  "wallet.transactions.csv.value.type.received": "!!!Received",
+  "wallet.transactions.csv.value.type.received": "入金",
+  "wallet.transactions.csv.value.type.sent": "送金",
   "wallet.transactions.header.exportCSV.button.label": "CSVをエクスポートする",
   "wallet.transactions.header.transactions": "トランザクション",
   "wallet.transactions.no.transactions": "トランザクションはありません",
