[DDW-385] Filter and export transactions to a CSV file (#2207)
* [DDW-385] Init

* [DDW-385] CHANGELOG

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress - header

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] Progress

* [DDW-385] UI progress

* [DDW-385] Make rewardsCsvExport generic

* [DDW-385] Implement CSV request - progress

* [DDW-385] Transactions CSV working

* [DDW-385] Filtering progress

* [DDW-385] Filtering - progress

* [DDW-385] Filtering working

* [DDW-385] Disable CSV when no tx

* CSV Generator helper

* [DDW-385] Localized CSV generator

* [DDW-385] Japanese translation

* [DDW-385] Readd re-add dummy data

* [DDW-385] Styling adjustment

* [DDW-385] Small fix

* [DDW-385] Locale and User pref formatting

* [DDW-385] Dummy data

* [DDW-385] Add currentNumberFormat to TinyInput

* [DDW-385] Remove unecessary element styling

* [DDW-385] Storybook story for Transactions with header

* [DDW-385] Remove dummy data

* [DDW-385] Translation manager

* [DDW-385] Remove Flow and Lint errors

* [DDW-385] Disabled files when wallet is restoring

* [DDW-385] Fix CSV with missing From Address

* [DDW-385] Fix Tx header button styles

* [DDW-385] Fix Tx header button icon

* [DDW-385] Remove dash for unresolved addresses

* [DDW-385] Runs prettier

* [DDW-385] Update flowconfig

* [DDW-385] Runs stylelint

* [DDW-385] Transactions CSV download notification

* [DDW-385] Lint errors

* [DDW-385] CSV download notification JP

* [DDW-385] Rewards CSV notification - progress

* [DDW-385] Rewards CSV notification - finished

* [DDW-385] Transactions CSV adjustments

* [DDW-385] Rewards CSV dates in UTC

* [DDW-385] Adjustments

* [DDW-385] Localizable rewards CSV filename

* [DDW-385] Correct CSS rules order

* [DDW-385] JP values for Sent & Received

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -194,6 +194,8 @@
   "notification.copyStateDirectoryPath": "Daedalusステータスディレクトリーをクリップボードにコピーしました",
   "notification.downloadLogsProgress": "ダウンロード用のログを準備しています",
   "notification.downloadLogsSuccess": "ログをダウンロードしました",
+  "notification.downloadRewardsCSVSuccess": "CSVファイルのダウンロードが完了しました",
+  "notification.downloadTransactionsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
   "paper.wallet.create.certificate.completion.dialog.addressInstructions": "ペーパーウォレットを用いて資金を受け取るには、ウォレットアドレスを共有してください。",
   "paper.wallet.create.certificate.completion.dialog.addressLabel": "ウォレットアドレス",
@@ -435,6 +437,7 @@
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "PDF証明書をダウンロードする",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "ウォレットを開く",
   "staking.redeemItnRewards.step3.success.title": "インセンティブ付きテストネットの報酬は還元されました",
+  "staking.rewards.csvFilenamePrefix": "報酬",
   "staking.rewards.exportButtonLabel": "CSV形式でエキスポートする",
   "staking.rewards.learnMore.ButtonLabel": "もっと知る",
   "staking.rewards.learnMore.linkUrl": "https://iohk.zendesk.com/hc/ja/articles/900000026583",
@@ -474,7 +477,7 @@
   "staking.stakePools.tableHeader.potentialRewards": "見込み報酬額",
   "staking.stakePools.tableHeader.producedBlocks": "生成ブロック数",
   "staking.stakePools.tableHeader.rank": "ランク",
-  "staking.stakePools.tableHeader.retiring": "で引退",
+  "staking.stakePools.tableHeader.retiring": "終了予定",
   "staking.stakePools.tableHeader.roi": "!!!Roi",
   "staking.stakePools.tableHeader.saturation": "飽和",
   "staking.stakePools.tableHeader.ticker": "ティッカー",
@@ -918,6 +921,22 @@
   "wallet.transaction.type.exchange": "換金",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "アドレスを表示する。",
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Cardanoエクスプローラーでこのトランザクションを開き",
+  "wallet.transactions.csv.column.addressesFrom": "送信元アドレス",
+  "wallet.transactions.csv.column.addressesTo": "送信先アドレス",
+  "wallet.transactions.csv.column.amount": "額",
+  "wallet.transactions.csv.column.dateTime": "日時",
+  "wallet.transactions.csv.column.id": "ID",
+  "wallet.transactions.csv.column.status": "ステータス",
+  "wallet.transactions.csv.column.type": "タイプ",
+  "wallet.transactions.csv.column.withdrawals": "引き出し",
+  "wallet.transactions.csv.filenamePrefix": "トランザクション",
+  "wallet.transactions.csv.value.amount": "{amount}ADA",
+  "wallet.transactions.csv.value.statusConfirmed": "承認済み",
+  "wallet.transactions.csv.value.statusPending": "保留中",
+  "wallet.transactions.csv.value.type.received": "入金",
+  "wallet.transactions.csv.value.type.sent": "送金",
+  "wallet.transactions.header.exportCSV.button.label": "CSVをエクスポートする",
+  "wallet.transactions.header.transactions": "トランザクション",
   "wallet.transactions.no.transactions": "トランザクションはありません",
   "wallet.transferFunds.dialog1.continueLabel": "続ける",
   "wallet.transferFunds.dialog1.sourceWallet": "送金元Byronレガシーウォレット",
