--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -683,6 +683,7 @@
   "wallet.receive.page.spendingPasswordPlaceholder": "Password",
   "wallet.receive.page.walletAddressLabel": "Your wallet address",
   "wallet.receive.page.walletReceiveInstructions": "<p>Share this wallet address to receive payments. To protect your privacy, always use a new address when requesting funds.</p> <p>To generate a new address please enter your spending password and press the ‘Generate a new address’ button.</p> ",
+  "wallet.receive.pdf.filenamePrefix": "Address",
   "wallet.receive.pdf.author": "Daedalus wallet",
   "wallet.receive.pdf.creationDate": "PDF creation date {date} {time}",
   "wallet.receive.pdf.networkLabel": "Cardano network:",
