--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -195,6 +195,7 @@
   "notification.downloadAddressPDFSuccess": "Address: <strong>{walletAddress}</strong> PDF successfully downloaded",
   "notification.downloadLogsProgress": "Preparing logs for download",
   "notification.downloadLogsSuccess": "Logs successfully downloaded",
+  "notification.downloadQRCodeImageSuccess": "Address: <strong>{walletAddress}</strong> QR code image successfully downloaded",
   "notification.downloadRewardsCSVSuccess": "CSV file successfully downloaded",
   "notification.downloadTransactionsCSVSuccess": "CSV file successfully downloaded",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "copied",
@@ -672,14 +673,15 @@
   "wallet.receive.dialog.downloadPDFButton": "Download as PDF",
   "wallet.receive.dialog.inputLabel": "Note for the PDF",
   "wallet.receive.dialog.inputPlaceholder": "Add an optional note to be printed on the PDF document",
+  "wallet.receive.dialog.saveQRCodeImage": "Save QR code image",
   "wallet.receive.page.addresses.addressesTitle": "Receiving addresses",
   "wallet.receive.page.copyAddressLabel": "Copy address",
   "wallet.receive.page.generateNewAddressButtonLabel": "Generate a new address",
-  "wallet.receive.page.instructions.instructionsDescription": "<p>Share any of these wallet addresses to receive payments. To protect your privacy, always use a new address when requesting funds.</p><p>New addresses will be automatically generated after you receive funds to the addresses listed here.</p>",
+  "wallet.receive.page.instructions.instructionsDescription": "Share any of these wallet addresses to receive payments. To protect your privacy, always use a new address when requesting funds. New addresses will be automatically generated after you receive funds to the addresses listed here.",
   "wallet.receive.page.instructions.instructionsTitle": "Your wallet addresses",
   "wallet.receive.page.receivingAddressesSectionTitle": "Receiving addresses",
   "wallet.receive.page.shareAddressLabel": "Share",
-  "wallet.receive.page.showUsedLabel": "show used",
+  "wallet.receive.page.showUsedLabel": "Show used",
   "wallet.receive.page.spendingPasswordPlaceholder": "Password",
   "wallet.receive.page.walletAddressLabel": "Your wallet address",
   "wallet.receive.page.walletReceiveInstructions": "<p>Share this wallet address to receive payments. To protect your privacy, always use a new address when requesting funds.</p> <p>To generate a new address please enter your spending password and press the ‘Generate a new address’ button.</p> ",
