--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -195,6 +195,7 @@
   "notification.downloadAddressPDFSuccess": "アドレス：<strong></strong>{walletAddress}<strong></strong> PDFをダウンロードしました",
   "notification.downloadLogsProgress": "ダウンロード用のログを準備しています",
   "notification.downloadLogsSuccess": "ログをダウンロードしました",
+  "notification.downloadQRCodeImageSuccess": "!!!Address: <strong>{walletAddress}</strong> QR code image successfully downloaded",
   "notification.downloadRewardsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "notification.downloadTransactionsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
@@ -672,10 +673,11 @@
   "wallet.receive.dialog.downloadPDFButton": "PDFをダウンロードする",
   "wallet.receive.dialog.inputLabel": "PDF用メモ",
   "wallet.receive.dialog.inputPlaceholder": "PDF文書上に表示するメモを追加できます",
+  "wallet.receive.dialog.saveQRCodeImage": "!!!Save QR code image",
   "wallet.receive.page.addresses.addressesTitle": "入金先アドレス",
   "wallet.receive.page.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.page.generateNewAddressButtonLabel": "新しいアドレスを生成する",
-  "wallet.receive.page.instructions.instructionsDescription": "<p>いずれかのウォレットアドレスを共有して入金先に使用します。プライバシー保護のため入金先には常に新しいアドレスを使用してください。</p><p>ここに表示されているアドレスが入金先として使用されると、新しいアドレスが自動的に生成されます。</p>",
+  "wallet.receive.page.instructions.instructionsDescription": "いずれかのウォレットアドレスを共有して入金先に使用します。プライバシー保護のため入金先には常に新しいアドレスを使用してください。ここに表示されているアドレスが入金先として使用されると、新しいアドレスが自動的に生成されます。",
   "wallet.receive.page.instructions.instructionsTitle": "あなたのウォレットアドレス",
   "wallet.receive.page.receivingAddressesSectionTitle": "入金先アドレス",
   "wallet.receive.page.shareAddressLabel": "共有する",
