--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -195,7 +195,7 @@
   "notification.downloadAddressPDFSuccess": "アドレス：<strong></strong>{walletAddress}<strong></strong> PDFをダウンロードしました",
   "notification.downloadLogsProgress": "ダウンロード用のログを準備しています",
   "notification.downloadLogsSuccess": "ログをダウンロードしました",
-  "notification.downloadQRCodeImageSuccess": "!!!Address: <strong>{walletAddress}</strong> QR code image successfully downloaded",
+  "notification.downloadQRCodeImageSuccess": "アドレス：<strong>{walletAddress}</strong> QRコードの画像をダウンロードしました",
   "notification.downloadRewardsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "notification.downloadTransactionsCSVSuccess": "CSVファイルのダウンロードが完了しました",
   "paper.wallet.create.certificate.completion.dialog.addressCopiedLabel": "コピーされました",
@@ -673,7 +673,7 @@
   "wallet.receive.dialog.downloadPDFButton": "PDFをダウンロードする",
   "wallet.receive.dialog.inputLabel": "PDF用メモ",
   "wallet.receive.dialog.inputPlaceholder": "PDF文書上に表示するメモを追加できます",
-  "wallet.receive.dialog.saveQRCodeImage": "!!!Save QR code image",
+  "wallet.receive.dialog.saveQRCodeImage": "QRコードの画像を保存する",
   "wallet.receive.page.addresses.addressesTitle": "入金先アドレス",
   "wallet.receive.page.copyAddressLabel": "アドレスをコピーする",
   "wallet.receive.page.generateNewAddressButtonLabel": "新しいアドレスを生成する",
